# JapaneseNumber

./: .gitignore  CMakeLists.txt  data.h  jn.cpp  jn.hpp  jn_res.rc  main.cpp  resource.h
